did some fixing on the the CSS for a better responsive on smaller devices

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@
 
 .about-section-description {
   margin-right: 96px;
+  margin-bottom: 70px;
 }
 
 .about-section img {
@@ -150,7 +151,7 @@
   }
 
   .about-section-description {
-    margin: 0;
+    margin-right: 0;
   }
 
   .about-section {
@@ -160,8 +161,5 @@
 
   .about-section h1 {
     font-size: 45px;
-  }
-  .about-section-image {
-    margin-top: 70px;
   }
 }
